<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_GMD" Id="{e07be9ee-1c30-4de2-9fbb-2a29f1e5894a}">
    <Declaration><![CDATA[VAR_GLOBAL

// FB_MKS317

{attribute 'pytmc' := ' pv: EM1K0:GMD:GPI:10 '}
fb_EM1K0_GMD_GPI_10 : FB_MKS317;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GPI:40 '}
fb_EM1K0_GMD_GPI_40 : FB_MKS317;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GPI:70 '}
fb_EM1K0_GMD_GPI_70 : FB_MKS317;

// FB_PTM_TwisTorr

{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:10 '}
fb_EM1K0_GMD_PTM_10 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:20 '}
fb_EM1K0_GMD_PTM_20 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:30 '}
fb_EM1K0_GMD_PTM_30 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:40 '}
fb_EM1K0_GMD_PTM_40 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:50 '}
fb_EM1K0_GMD_PTM_50 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:60 '}
fb_EM1K0_GMD_PTM_60 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM1K0:GMD:PTM:70 '}
fb_EM1K0_GMD_PTM_70 : FB_PTM_TwisTorr;

// FB_VRC

{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:10 '}
fb_EM1K0_GMD_VRC_10 : FB_VRC;
{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:20 '}
fb_EM1K0_GMD_VRC_20 : FB_VRC;
{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:30 '}
fb_EM1K0_GMD_VRC_30 : FB_VRC;
{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:50 '}
fb_EM1K0_GMD_VRC_50 : FB_VRC;
{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:60 '}
fb_EM1K0_GMD_VRC_60 : FB_VRC;
{attribute 'pytmc' := ' pv: EM1K0:GMD:VRC:70 '}
fb_EM1K0_GMD_VRC_70 : FB_VRC;

// FB_MKS422

{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:10 '}
fb_EM1K0_GMD_GCC_10 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:20 '}
fb_EM1K0_GMD_GCC_20 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:30 '}
fb_EM1K0_GMD_GCC_30 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:40 '}
fb_EM1K0_GMD_GCC_40 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:50 '}
fb_EM1K0_GMD_GCC_50 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:60 '}
fb_EM1K0_GMD_GCC_60 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM1K0:GMD:GCC:70 '}
fb_EM1K0_GMD_GCC_70 : FB_MKS422;

// FB_EbaraEVA

{attribute 'pytmc' := ' pv: EM1K0:GMD:PRT:40 '}
fb_EM1K0_GMD_PRT_40 : FB_EbaraEVA;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>