<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="PRG_GMD" Id="{febc07a9-f1e9-4dc5-b21e-96967800d0f7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GMD
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// FB_MKS317

fb_EM1K0_GMD_GPI_10(PG=>);
fb_EM1K0_GMD_GPI_40(PG=>);
fb_EM1K0_GMD_GPI_70(PG=>);

// FB_PTM_TwisTorr

fb_EM1K0_GMD_PTM_10(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_20(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_30(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_40(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_50(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_60(i_xExtILKOk := TRUE);
fb_EM1K0_GMD_PTM_70(i_xExtILKOk := TRUE);

// FB_VRC

fb_EM1K0_GMD_VRC_10(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM1K0_GMD_VRC_20(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM1K0_GMD_VRC_30(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM1K0_GMD_VRC_50(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM1K0_GMD_VRC_60(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM1K0_GMD_VRC_70(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);

// FB_MKS422

fb_EM1K0_GMD_GCC_10(PG := fb_EM1K0_GMD_GPI_10.PG);
fb_EM1K0_GMD_GCC_20(PG := fb_EM1K0_GMD_GPI_10.PG);
fb_EM1K0_GMD_GCC_30(PG := fb_EM1K0_GMD_GPI_10.PG);
fb_EM1K0_GMD_GCC_40(PG := fb_EM1K0_GMD_GPI_40.PG);
fb_EM1K0_GMD_GCC_50(PG := fb_EM1K0_GMD_GPI_70.PG);
fb_EM1K0_GMD_GCC_60(PG := fb_EM1K0_GMD_GPI_70.PG);
fb_EM1K0_GMD_GCC_70(PG := fb_EM1K0_GMD_GPI_70.PG);

// FB_EbaraEVA

fb_EM1K0_GMD_PRT_40(i_xExtIlkOK := TRUE);
]]></ST>
    </Implementation>
    <LineIds Name="PRG_GMD">
      <LineId Id="6" Count="38" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>